@@ -16,6 +16,7 @@ import com.luckyseven.backend.domain.expense.dto.ExpenseUpdateRequest;
 import com.luckyseven.backend.domain.expense.entity.Expense;
 import com.luckyseven.backend.domain.expense.enums.ExpenseCategory;
 import com.luckyseven.backend.domain.expense.enums.PaymentMethod;
+import com.luckyseven.backend.domain.expense.mapper.ExpenseMapper;
 import com.luckyseven.backend.domain.expense.repository.ExpenseRepository;
 import com.luckyseven.backend.domain.member.entity.Member;
 import com.luckyseven.backend.domain.member.service.MemberService;
@@ -425,9 +426,11 @@ class ExpenseServiceTest {
     void success() {
       // given
       Pageable pageable = PageRequest.of(0, 10);
+
+      // 1) Expense 엔티티 생성
       List<Expense> expenses = List.of(
           Expense.builder()
-              .description("럭키비키즈 미국에서 점심 식사")
+              .description("점심 식사")
               .amount(new BigDecimal("10000.00"))
               .category(ExpenseCategory.MEAL)
               .paymentMethod(PaymentMethod.CASH)
@@ -435,7 +438,7 @@ class ExpenseServiceTest {
               .team(team)
               .build(),
           Expense.builder()
-              .description("럭키비키즈 미국에서 저녁 식사")
+              .description("저녁 식사")
               .amount(new BigDecimal("15000.00"))
               .category(ExpenseCategory.MEAL)
               .paymentMethod(PaymentMethod.CARD)
@@ -443,23 +446,26 @@ class ExpenseServiceTest {
               .team(team)
               .build()
       );
-      Page<Expense> page = new PageImpl<>(expenses, pageable, 2);
+
+      List<ExpenseResponse> responseDtos = expenses.stream()
+          .map(ExpenseMapper::toExpenseResponse)
+          .toList();
+      Page<ExpenseResponse> page = new PageImpl<>(responseDtos, pageable, responseDtos.size());
 
       when(teamRepository.existsById(1L)).thenReturn(true);
-      when(expenseRepository.findByTeamId(1L, pageable)).thenReturn(page);
+      when(expenseRepository.findResponsesByTeamId(1L, pageable)).thenReturn(page);
 
-      // when
-      PageResponse<ExpenseResponse> response = expenseService.getListExpense(1L, pageable);
+      PageResponse<ExpenseResponse> result = expenseService.getListExpense(1L, pageable);
 
       // then
-      assertThat(response.getContent()).hasSize(2);
-      assertThat(response.getPage()).isEqualTo(0);
-      assertThat(response.getSize()).isEqualTo(10);
-      assertThat(response.getTotalElements()).isEqualTo(2);
-      assertThat(response.getTotalPages()).isEqualTo(1);
+      assertThat(result.getContent()).hasSize(2);
+      assertThat(result.getPage()).isEqualTo(0);
+      assertThat(result.getSize()).isEqualTo(10);
+      assertThat(result.getTotalElements()).isEqualTo(2);
+      assertThat(result.getTotalPages()).isEqualTo(1);
 
-      ExpenseResponse first = response.getContent().getFirst();
-      assertThat(first.description()).isEqualTo("럭키비키즈 미국에서 점심 식사");
+      ExpenseResponse first = result.getContent().get(0);
+      assertThat(first.description()).isEqualTo("점심 식사");
       assertThat(first.amount()).isEqualByComparingTo(new BigDecimal("10000.00"));
     }
 
